frontend/test/should_pass/attrib_006by.grg
using attrib_model_001;

rule r {
	nby : NBYTE;
	-eby:EBYTE->;

	modify {
		eval {
			nby.a = 1y;
			eby.a = (byte)2;

			nby.a = (byte)(nby.a | eby.a);
			nby.a = (byte)(nby.a ^ eby.a);
			nby.a = (byte)(nby.a & eby.a);
			nby.a = (byte)(nby.a << eby.a);
			nby.a = (byte)(nby.a >> eby.a);
			nby.a = (byte)(nby.a >>> eby.a);
			nby.a = (byte)(nby.a + eby.a);
			nby.a = (byte)(nby.a - eby.a);
			nby.a = (byte)(nby.a * eby.a);
			nby.a = (byte)(nby.a / eby.a);
			nby.a = (byte)(nby.a % eby.a);
		}
	}
}

