frontend/test/should_fail/disallow_action_package_declaration_of_builtin_Transaction_package.grg
package Transaction
{
}

rule r
{
	modify {
	---
		eval {
//			Transaction::start();
		}
	}
}
